# css-in-rust

./: .gitignore  .npmignore  CHANGELOG.md  README.md  monorepo-file-dependency-graph.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsup.config.ts  tsup.dts.config.ts
.github/workflows/: benchmark.yml  build-matrix.yml  (+15 more)
docs/: dependency-matrix.md  npm-publish-guide.md
examples/: README.md
native/: Cargo.toml  clippy-final.txt  clippy-warnings.txt  index.d.ts  index.mjs  package.json
native/.cargo/: config.toml
native/src/: ast_optimizer.rs  debug.rs  legacy_root_part.rs  lib.rs  oxc_parser.rs  scan_cache.rs  tests.rs  watcher.rs
native/src/application/: analyzer.rs  animate_utils.rs  ast_extract.rs  atomic.rs  atomic_parser.rs  cache_resolver.rs  cascade_resolver.rs  class_utils.rs  container_query.rs  css_analysis.rs  engine.rs  hashing.rs  id_registry.rs  impact_analysis.rs  impact_scorer.rs  incremental.rs  legacy_part.rs  mod.rs  optimization.rs  plugin_registry.rs  scanner.rs  services.rs  state_css.rs  template_parser.rs  tw_merge.rs
native/src/domain/: animation.rs  css_compiler.rs  css_resolver.rs  mod.rs  model.rs  semantic.rs  services.rs  theme.rs  transform.rs  transform_components.rs  transform_parser.rs  variants.rs
native/src/infrastructure/: adapters.rs  cache_store.rs  legacy_part.rs  mod.rs
native/src/interface/: ffi.rs  legacy_part.rs  mod.rs
native/src/shared/: utils.rs
scripts/: benchmark-engine.ts  check-pack-artifacts.ts  check-umbrella-exports.ts  validate-canary.mjs  validate-qa.mjs  version-sync.ts
(+30 files in other folders)
