[package]
name = "tailwind_styled_parser"
version = "5.0.0"
edition = "2021"
description = "Native Rust engine for tailwind-styled-v5"

[lib]
# cdylib  → .node file for Node.js N-API
# staticlib → optional, for C ABI consumers (bindings/)
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
# Regex engine — used for class tokenisation, tw detection, RSC analysis
regex = "1"
# Once-cell for lazy static regex compilation (avoid recompiling on every call)
once_cell = "1"
dashmap = "6.1.0"
notify = "6"
# ─ OPTIMIZATION (Phase 2): Parallel iterators for workspace scanning
rayon = "1.7"
num_cpus = "1.16"
# ─ OPTIMIZATION (Phase 3): AST-based template detection
oxc_parser = "0.55"
oxc_allocator = "0.55"
oxc_ast = "0.55"
oxc_span = "0.55"
oxc_syntax = "0.55"
oxc_ast_visit = "0.55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
md5 = "0.7"
# Di bagian [dependencies], tambahkan:
lightningcss = { version = "1.0.0-alpha.60", features = ["default"] }

[build-dependencies]
napi-build = "2"

[profile.release]
# Optimise for size, strip debug symbols
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Speed-optimized dev builds for faster iteration
opt-level = 1

[profile.test]
# Faster test builds
opt-level = 1

[[bin]]
name = "export-schemas"
path = "src/bin/export_schemas.rs"